--- a/src/templates/countryList.hbs
+++ b/src/templates/countryList.hbs
@@ -1,6 +1,6 @@
-<ul>
+<ul class="country-list country-card-title">
 {{#each this}}
-<li class="">{{name}}</li>
+<li class="country-item ">{{name}}</li>
 
 {{/each}}
 </ul>
