--- a/src/sass/_country.scss
+++ b/src/sass/_country.scss
@@ -43,6 +43,24 @@
   text-align: left;
   background-color: lightskyblue;
 }
+// .country-item {
+
+//   cursor: pointer;
+// }
+.country-button {
+  color: rgb(56, 23, 1);
+  background-color: lightskyblue;
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
+  border-radius: 4px;
+}
+.country-button:hover,
+.country-button:focus {
+  cursor: pointer;
+  color: rgb(231, 228, 226);
+  background-color: steelblue;
+}
+
 .country-card {
   width: 800px;
   background-color: lightskyblue;
@@ -80,4 +98,8 @@
   font-size: 20px;
   font-weight: 700;
   color: black;
+}
+.reset-button {
+  background-color: rgba(255, 255, 255, 0.3);
+  color: white;
 }
