--- a/src/sass/_country.scss
+++ b/src/sass/_country.scss
@@ -99,7 +99,21 @@
   font-weight: 700;
   color: black;
 }
-.reset-button {
-  background-color: rgba(255, 255, 255, 0.3);
+.reset-button-style {
+  margin-left: 20px;
+  padding: 6px 12px;
+
+  background-color: rgb(112, 120, 128);
   color: white;
+  border-radius: 4px;
+}
+
+.reset-button-style:focus,
+.reset-button-style:hover {
+  cursor: pointer;
+  background-color: rgb(99, 111, 122);
+}
+.country-menu {
+  display: block;
+  align-items: center;
 }
